--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -376,7 +376,7 @@ Using the bootstrapping data we find that at a given normalized
 radius, $x$, the logarithm of the normalized integrated mass, $m$, follows a 
 distribution that can approximated by a gaussian with variance
 \begin{equation}
-\sigma_x^2 = \frac{1-x}{x}\frac{1}{6N}.
+\sigma_x^2 = \frac{1-x}{x}\frac{1}{N}.
 \label{eq:sigma}
 \end{equation}
 
