--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,3 +1,21 @@
+@ARTICLE{2008MNRAS.391.1685S,
+   author = {{Springel}, V. and {Wang}, J. and {Vogelsberger}, M. and {Ludlow}, A. and 
+	{Jenkins}, A. and {Helmi}, A. and {Navarro}, J.~F. and {Frenk}, C.~S. and 
+	{White}, S.~D.~M.},
+    title = "{The Aquarius Project: the subhaloes of galactic haloes}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {0809.0898},
+ keywords = {methods: numerical , dark matter},
+     year = 2008,
+    month = dec,
+   volume = 391,
+    pages = {1685-1711},
+      doi = {10.1111/j.1365-2966.2008.14066.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2008MNRAS.391.1685S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{2014MNRAS.441.3359D,
    author = {{Dutton}, A.~A. and {Macci{\`o}}, A.~V.},
     title = "{Cold dark matter haloes in the Planck era: evolution of structural parameters for Einasto and NFW profiles}",
