--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,3 +1,21 @@
+@ARTICLE{Ludlow2016,
+   author = {{Ludlow}, A.~D. and {Bose}, S. and {Angulo}, R.~E. and {Wang}, L. and 
+	{Hellwing}, W.~A. and {Navarro}, J.~F. and {Cole}, S. and {Frenk}, C.~S.
+	},
+    title = "{The mass-concentration-redshift relation of cold and warm dark matter haloes}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1601.02624},
+ keywords = {methods: numerical, galaxies: haloes, dark matter},
+     year = 2016,
+    month = aug,
+   volume = 460,
+    pages = {1214-1232},
+      doi = {10.1093/mnras/stw1046},
+   adsurl = {http://adsabs.harvard.edu/abs/2016MNRAS.460.1214L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{2008MNRAS.391.1685S,
    author = {{Springel}, V. and {Wang}, J. and {Vogelsberger}, M. and {Ludlow}, A. and 
 	{Jenkins}, A. and {Helmi}, A. and {Navarro}, J.~F. and {Frenk}, C.~S. and 
